# TUI-Youtube-Music-Player

./: .gitignore  Cargo.toml  README.md  notes.md
src/: app.rs  main.rs  utils.rs  youtubeclient.rs
src/ui/: mod.rs  playbar.rs  playlists.rs  searchbar.rs  searchresults.rs
