[package]
name = "yt-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.9"

# YT api
google-youtube3 = "2.0.10+20210330"

# Utils
tokio = {version = "1.15.0", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = "1.0.133"
serde_json = "1.0.74"
dotenv = "0.15.0"